icmake (8.00.03)

 * Fixed a erroneously placed variable definition in icmbuild.in



icmake (8.00.02)

  * Fixed a leftover size_t / unsigned mismatch on amd64 architectures.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 08 Dec 2015 19:23:40 +0100

icmake (8.00.01)

  * Fixed size_t / unsigned mismatches on amd64 architectures.

  * Applied patches provided by Tony Mancill. Thanks, Tony :-)

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 08 Dec 2015 10:55:36 +0100

icmake (8.00.00)

  * This release adds several new builtin functions, which required a
    redefinition of the builtin function codes. Because of this existing .bim
    files must be recompiled from their .im source files. 

  * Martin Dorwig suggested several additions to icmake's run-time support
    functions. In particular facilities for formatted string construction and
    formatted printf functions. Many of his suggestions were implemented in
    version 8.00.00, which now offers several new built-in functions
    (get_dext, length, resize, strformat, trim, trimleft, trimright (see
    icmake(1) for details)).

  * The functions fprintf and printf now support a format string as their
    first argument, in which %-notations refer to subsequent argument numbers
    (see icmake(1) for details). 

  * The 16 bit offset limit was removed from fgets. Also, fgets's signature
    changed. See icmake(1) for details.

  * Added the 'continue' statement/keyword to the flow constrol statements. It
    can be used inside while and for statements.

  * Added the ternary operator (?:) to the set of supported operators. 

  * Global variable initialization can now use expression statements, not just
    constant expressions.

  * Local variables can be defined and immediately initialized anywhere inside
    functions. Multiple local variables (of the same type) can be defined in
    the initialization section of a for-statement, A single variable can be