@@ -1,6 +1,5 @@
 
-/* #define msg
-*/
+#define msgx
 
 #include "parser.ih"
 
